--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     </head>
     <body>
         <div id="main">
+            <img id=img height=40 src="https://lh3.googleusercontent.com/a-/AOh14Gh-CwvGkngFp6REJf46ncZD2p-nesp_4DmKOpSXGA=k-s420"   />
             <canvas id="canvas" width="644" height="644"></canvas>
 			<div id="status"></div>
             <script>
-                var key = {
+            /*    var key = {
 	UP: 38,
 	DOWN: 40,
 	LEFT: 37,
@@ -103,8 +104,30 @@ function clearCanvas(whenPressKey) {
                 ctx.drawImage(background,0,0);
         }
 	}
-}
+}*/
             
+const EL_img = document.querySelector("#img");
+const pos = {x:0, y:0};
+
+document.addEventListener("keydown", (ev) => {
+
+  const dir = (ev.key.match(/(?<=^Arrow)\w+/)||[])[0];
+  if (!dir) return; // Not an arrow key.
+  
+  ev.preventDefault(); // Prevent Browser scroll if overflow
+
+  ({
+    Left:  () => pos.x -= 5,
+    Right: () => pos.x += 5,
+    Up:    () => pos.y -= 5,
+    Down:  () => pos.y += 5,
+  }[dir])(); 
+  
+  EL_img.style.transform = `translate(${pos.x}px, ${pos.y}px)`
+});
+
+
+
                 var canvas = document.getElementById("canvas"),
                 ctx = canvas.getContext("2d");
 
@@ -121,13 +144,13 @@ function clearCanvas(whenPressKey) {
 paper.fillStyle = randomColor();
 paper.fillRect(265, 265, 295, 295);
 
-$('#canvas').keydown(function(e) {
+$('#canvas').mousemove(function(e) {
     var pos = findPos(this);
-    var x1 = e.x - pos.x;
-    var y1 = e.y - pos.y;
-    var coord = "x=" + x1 + ", y=" + y1;
+    var x = e.pageX - pos.x;
+    var y = e.pageY - pos.y;
+    var coord = "x=" + x + ", y=" + y;
     var c = this.getContext('2d');
-    var p = c.getImageData(x1, y1, 1, 1).data; 
+    var p = c.getImageData(x, y, 1, 1).data; 
     var hex = "#" + ("000000" + rgbToHex(p[0], p[1], p[2])).slice(-6);
     $('#status').html(coord + "<br>" + hex);
 });
