--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     </head>
     <body>
         <div id="main">
+            <canvas id="banvas" width="400" height="400"></canvas>
             <img id=img height=40 src="https://lh3.googleusercontent.com/a-/AOh14Gh-CwvGkngFp6REJf46ncZD2p-nesp_4DmKOpSXGA=k-s420"   />
             <canvas id="canvas" width="644" height="644"></canvas>
 			<div id="status"></div>
+            <div id="colorType"></div>
             <script>
             /*    var key = {
 	UP: 38,
@@ -105,15 +107,16 @@ function clearCanvas(whenPressKey) {
         }
 	}
 }*/
-            
+const banvas = document.getElementById('banvas');
+const context = banvas.getContext('2d');
 const EL_img = document.querySelector("#img");
 const pos = {x:0, y:0};
 
-document.addEventListener("keydown", (ev) => {
+const colorType = document.querySelector("#colorType");
 
+document.addEventListener("keydown", (ev) => {
   const dir = (ev.key.match(/(?<=^Arrow)\w+/)||[])[0];
   if (!dir) return; // Not an arrow key.
-  
   ev.preventDefault(); // Prevent Browser scroll if overflow
 
   ({
@@ -122,10 +125,18 @@ document.addEventListener("keydown", (ev) => {
     Up:    () => pos.y -= 5,
     Down:  () => pos.y += 5,
   }[dir])(); 
-  
-  EL_img.style.transform = `translate(${pos.x}px, ${pos.y}px)`
-});
 
+  const imgRect = EL_img.getBoundingClientRect();
+  const banvasX = imgRect.left - window.scrollX + pos.x;
+  const banvasY = imgRect.top - window.scrollY + pos.y;
+  const imageData = context.getImageData(banvasX, banvasY, 1, 1);
+  const pixel = imageData.data;
+  const color = `rgb(${pixel[0]}, ${pixel[1]}, ${pixel[2]})`;
+
+  colorType.textContent = color;
+  
+  EL_img.style.transform = `translate(${pos.x}px, ${pos.y}px)`;
+});
 
 
                 var canvas = document.getElementById("canvas"),
