--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ function drawAction(whenPressKey){
   if (hex === "#000000") {
     x = 314;
     y = 3;
+    paper.clearRect(0, 0, square.width, square.height);
   }
 
   console.log("Detected color: " + hex);
