--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
         <script src="lib/jquery-3.6.4.min.js"></script>
     </head>
     <body>
+        <audio id="myAudio" src="aud/piano.wav" type="audio/wav" controls loop ></audio>
+        <h1 id="mainTitle">Cloud Maze Solver</h1>
         <div id="main">
+            
             <canvas id="canvas" width="644" height="644"></canvas>
             <canvas id="bgcanvas" width="644" height="644"></canvas>
-			<div id="status"></div>
+        
             <script>
+                $(document).ready(function() {
+                    $("#myAudio").get(0).play();
+                });
  var key = {
   UP: 38,
   DOWN: 40,
