--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Cloud Maze Solver</title>
         <script src="js/scripts.js"></script>
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="img/cloud.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <script src="lib/jquery-3.6.4.min.js"></script>
     </head>
